--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -20,7 +20,7 @@
     "react": "18",
     "react-dom": "18",
     "typescript": "^5",
-    "viem": "2.21.25",
+    "viem": "^2.29.2",
     "wagmi": "^2.12.7"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "pino-pretty": "^13.0.0",
     "tailwindcss": "^3.4.1"
   }
 }
