--- a/packages/ccip-react-components/package.json
+++ b/packages/ccip-react-components/package.json
@@ -47,7 +47,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
-    "viem": "2.21.25",
+    "viem": "^2.29.2",
     "wagmi": "^2.12.7",
     "zod": "^3.23.8"
   },
